manifest/objects/Apttus__FileSplit__c.object
<CustomObject>
    <description>Contains information of files split from a large file</description>
    <fields>
        <fullName>Apttus__OriginalFileId__c</fullName>
        <description>ID of the original file</description>
        <externalId>true</externalId>
        <inlineHelpText>ID of the original file</inlineHelpText>
        <label>Original File</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__PrimaryObjectId__c</fullName>
        <description>ID of the primary object associated with the File</description>
        <externalId>true</externalId>
        <inlineHelpText>ID of the primary object associated with the File</inlineHelpText>
        <label>Primary Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__PrimaryObjectType__c</fullName>
        <description>Primary object associated with the File</description>
        <inlineHelpText>Primary object associated with the File</inlineHelpText>
        <label>Primary Object Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__SecondaryObjectId__c</fullName>
        <description>ID of the secondary object associated with the File</description>
        <externalId>true</externalId>
        <inlineHelpText>ID of the secondary object associated with the File</inlineHelpText>
        <label>Secondary Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__SecondaryObjectType__c</fullName>
        <description>Secondary object associated with the File</description>
        <inlineHelpText>Secondary object associated with the File</inlineHelpText>
        <label>Secondary Object Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__SplitFileId__c</fullName>
        <description>ID of the split file in File object</description>
        <externalId>true</externalId>
        <inlineHelpText>ID of the split file in File object</inlineHelpText>
        <label>Split File</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>File Split</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>File Splits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>